[package]
authors = ["binotation"]
edition = "2021"
readme = "README.md"
name = "uart-echo"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
# cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
heapless = "0.8.0"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

[dependencies.stm32u5]
path = "../../stm32-rs-nightlies/stm32u5"
features = ["stm32u575"]

# this lets you use `cargo fix`!
[[bin]]
name = "uart-echo"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
